@@ -15,6 +15,13 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.sun</groupId>
+      <artifactId>tools</artifactId>
+      <version>1.8.0</version>
+      <scope>system</scope>
+      <systemPath>${java.home}/../lib/tools.jar</systemPath>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.7.0</version>
@@ -56,13 +63,8 @@
         <version>3.8.1</version>
         <configuration>
 <!--          <release>11</release>-->
-          <source>11</source>
-          <target>11</target>
-          <compilerArgs>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-          </compilerArgs>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -87,9 +89,9 @@
                               <target-module>, regardless of module declaration.
 
           -->
-          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argLine>
-          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argLine>
-          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>
+<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argLine>-->
+<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argLine>-->
+<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>-->
         </configuration>
         <executions>
           <execution>
